Fixed layout issues Added two new components and routing

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 .App {
   text-align: center;
-  font-family: sans-serif;
+}
+
+.App-header {
+  background-color: #222;
+  height: 130px;
+  padding: 20px;
+  color: #EFEFEF;
 }
